Avoid overflow x with the body and add href with the anchor

--- a/styles/_default.scss
+++ b/styles/_default.scss
@@ -4,6 +4,7 @@ body {
     margin: 0;
     font-family: 'Be Vietnam', sans-serif;
     font-size: 16px;
+    overflow-x: hidden;
 
     background: url("../images/bg-tablet-pattern.svg"), url("../images/illustration-intro.svg"), url("../images/bg-tablet-pattern.svg");
     background-blend-mode: overlay;
